[build-system]
requires = ["setuptools>=59.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pygodic"
version = "0.1.0"
description = "Eddington's inversion formula using quadrature methods"
authors = [{name = "Cristóbal Armaza", email="ca455@cornell.edu"}]
readme = "README.md"
requires-python = ">=3.10"
keywords = ["astrophysics", "galactic", "ergodic", "gravity"]
classifiers = [
"Programming Language :: Python :: 3",
"License :: OSI Approved :: MIT License",
"Operating System :: OS Independent",
]
dependencies = ["matplotlib>=3.6.0", "numpy>=1.23.0", "scipy>=1.9.0"]

[project.urls]
"Homepage" = "https://github.com/carmaza/pygodic"